Fixed container overflows

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -9,6 +9,9 @@ body {
   background: #000;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  @media only screen and (min-width: 1024px) {
+    height: 100%;
+  }
 }
 
 .container {
@@ -42,13 +45,17 @@ body {
   }
   @media only screen and (max-width: 736px) {
     background-size: cover;
-    background-position-x: 200px;
+    background-position-x: 100px;
+  }
+  @media only screen and (max-width: 667px) {
+    background-size: cover;
+    background-position-x: -100px;
   }
   @media only screen and (max-width: 515px) {
     background-size: cover;
     background-position-x: -200px;
   }
-  @media only screen and (max-width: 406px) {
+  @media only screen and (max-width: 430px) {
     background-size: cover;
     background-position-x: -320px;
   }
