--- a/stylesheets/trailers.scss
+++ b/stylesheets/trailers.scss
@@ -9,6 +9,9 @@ body {
   background: #000;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  @media only screen and (min-width: 1024px) {
+    height: 100%;
+  }
 }
 
 .container {
@@ -19,6 +22,7 @@ body {
   background-position-x: 615px;
   height: 100%;
   width: 100%;
+  overflow: hidden;
 
   @media only screen and (max-width: 1208px) {
     background-size: cover;
@@ -42,13 +46,17 @@ body {
   }
   @media only screen and (max-width: 736px) {
     background-size: cover;
-    background-position-x: 200px;
+    background-position-x: 100px;
+  }
+  @media only screen and (max-width: 667px) {
+    background-size: cover;
+    background-position-x: -100px;
   }
   @media only screen and (max-width: 515px) {
     background-size: cover;
     background-position-x: -200px;
   }
-    @media only screen and (max-width: 406px) {
+  @media only screen and (max-width: 430px) {
     background-size: cover;
     background-position-x: -320px;
   }
@@ -124,9 +132,9 @@ body {
 }
 
 .flex-container {
-  margin-top: 40px;
   margin-left: 80px;
   display: flex;
+  margin-top: 40px;
   @media only screen and (max-width: 623px) {
     flex-wrap: wrap;
     margin-left: 30px;
@@ -159,14 +167,10 @@ body {
   margin-right: 24px;
 }
 
-.trailer-container:first-child {
-  margin-top: 0;
-}
 .trailer-container {
-  @media only screen and (max-width: 571px) {
-    margin-top: 10px;
-  }
-  @media only screen and (max-width: 432px) {
+  margin-top: 40px;
+
+  @media only screen and (min-width: 1024px) {
     margin-top: 20px;
   }
 }
@@ -186,7 +190,7 @@ body {
 }
 
 .trailer-container > h2 {
-  font-size: 3.2em;
+  font-size: 2.2em;
   text-align: center;
   margin-top: 10px;
   font-family: "Roboto Condensed", sans-serif;
